package model;


import java.util.Date;

// Enum to represent the different types of seats
public enum SeatType {
    ECONOMY_CLASS,
    BUSINESS_CLASS,
    FIRST_CLASS;
}
